exports[`Information component renders succesfully 1`] = `
<div
  style={
    Object {
      "color": "white",
      "marginTop": "20px",
      "padding": "10px",
    }
  }>
  n/a created on Sun May 06 2018 15:11:59 GMT+0100 by n/a
</div>
`;

exports[`Information component renders succesfully with props 1`] = `
<div
  style={
    Object {
      "color": "white",
      "marginTop": "20px",
      "padding": "10px",
    }
  }>
  Test Type created on Mon Dec 17 2018 03:24:00 GMT+0100 by Aromokeye
</div>
`;
